--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --fix",
-	"format": "prettier ./src/*.js* --write"
+    "format": "prettier . --write"
   },
   "dependencies": {
     "react": "^17.0.2",
